more speed on small devices fixed background

--- a/trunk/pages/_template/visu.css
+++ b/trunk/pages/_template/visu.css
@@ -10,7 +10,10 @@
  
 @CHARSET "UTF-8";
 
-.page-bg { 
-    background-image: url('../../pics/bg/luminous_lines.png');
+/* display background only on larger displays */
+@media all and (min-width: 600px) {
+    .page-bg {
+	    background-image: url('../../pics/bg/luminous_lines.png');
+    }
 }
 
