--- a/trunk/pages/docu/visu.css
+++ b/trunk/pages/docu/visu.css
@@ -10,14 +10,19 @@
  
 @CHARSET "UTF-8";
 
-.page-bg { 
-    background-image: url('../../pics/bg/fractal.png');
+/* display background only on larger displays */
+@media all and (min-width: 600px) {
+    .page-bg {
+	    background-image: url('../../pics/bg/fractal.png');
+    }
 }
-                                                                 
+
+/* image for the shutter */
 #widget_device_shutter-shutter2 {
     background-image: url('../../pics/shutter/shutter_ocean.jpg');
 }
 
+/* image for the shutter */
 #widget_device_shutter-shutter3 {
     background-image: url('../../pics/shutter/shutter_cliff.jpg');
 }
