--- a/trunk/pages/meister/visu.css
+++ b/trunk/pages/meister/visu.css
@@ -10,10 +10,13 @@
  
 @CHARSET "UTF-8";
 
-.page-bg { 
-    background-image: url('../../pics/bg/greenhand.png');
+/* display background only on larger displays */
+@media all and (min-width: 600px) {
+    .page-bg {
+	    background-image: url('../../pics/bg/greenhand.png');
+    }
 }
 
 #widget_device_shutter-shutter2 {
-background-image: url('../../pics/shutter/shutter_ocean.jpg');
+	background-image: url('../../pics/shutter/shutter_ocean.jpg');
 } 
